fix: moving overflow hidden from container to the html solved the animation overflow problem

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,6 +12,7 @@ html {
 	font-size: 62.5%;
 	--scroll-behavior: smooth !important;
 	scroll-behavior: smooth !important;
+	overflow-x: hidden;
 
 	body {
 		max-width: 100vw;
